--- a/css/style.css
+++ b/css/style.css
@@ -226,19 +226,23 @@ form{
     background-color: #ebebec;
     cursor: pointer;
 }
-.icon-button-notifications{
+[data-notify]{
     position: absolute;
-    width: 20px;
-    height: 20px;
+}
+[data-notify]::after{
+    content: attr(data-notify);
+    position: absolute;
+    width: 22px;
+    height: 22px;
     top: 2px;
-    right: 1px;
+    right: -45px;
     background: #e60023;
     overflow: hidden;
     text-align: center;
     border-radius: 50%;
     color: #fff;
     font-size: 11px;
-    line-height: 20px;
+    line-height: 22px;
 }
 .icon-message{
     width: 48px;
